# SeamlessCloning

./: CMakeLists.txt  README.md  a.out  all.h  api.cpp  api.h  image.cpp  image.h  index.html  main.cpp  vector3.cpp  vector3.h  vertex.txt
rsc/: vertex.txt  vertex1.txt  vertex2.txt
